[metadata]
name = ks-pupilfitting
version = 0.1.1
author = Keisuke Sehara
author_email = keisuke.sehara@gmail.com
description = A set of procedures for fitting an ellipse to the pupil based on the DeepLabCut output.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BraiDyn-BC/python-ks-pupilfitting
project_urls =
    Bug Tracker = https://github.com/BraiDyn-BC/python-ks-pupilfitting/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy
    matplotlib
    pandas
    h5py
    tqdm
    opencv-python
    scikit-video

[flake8]
ignore =
    E501
    E221
    E712
